k8s/myapp-ing/2-mai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ing
  namespace: mai-ns
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp-ing
